--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   media_kit_libs_video: ^1.0.6
   file_picker: ^10.0.0
   collection: ^1.19.1
+  window_manager: ^0.4.3
 
 dev_dependencies:
   flutter_test:
